# libcin

./: .dir-locals.el  .gitignore  Makefile.am  README.md  autogen.sh  configure.ac  libcin.sym
src/: cin.c  cin.h  trie.c  trie.h
t/: test.c
test/: test.c
